--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,8 @@ h2 {
   height: 100%;
   border-radius: 30px;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Hero Section Style Ends */
 
